# calculator-package

./: LICENSE  README.md  pyproject.toml
calculator_package/: calculator.py
tests/: test_calculator_package.py
